Added PATCH tests for Beer and Customer